# basta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  THIRD-PARTY-LICENSES  basta-host-setup  basta-verify  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: agent-recipes.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: client_hello_scan.rs
share/: apparmor.basta  apparmor.bwrap
src/: argv.rs  cli.rs  client_hello.rs  egress.rs  env.rs  lockset.rs  main.rs  netns.rs  pty.rs  seccomp.rs  seed.rs  sni_proxy.rs  workspace.rs
