[package]
name = "basta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tls-parser = "0.12"

[[bin]]
name = "client_hello_scan"
path = "fuzz_targets/client_hello_scan.rs"
test = false
doc = false
bench = false

# Own workspace — keeps the fuzz crate out of the parent `cargo build`.
[workspace]
